--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <a class="nav-link me-lg-3" href="#experience">Eeperience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">Projects</a>
+                        <a class="nav-link me-lg-3" href="#projects">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -163,12 +163,12 @@
     <!-- Experience -->
 
     <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="projects">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Projects</h2>
+                <h2 id="projects-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Projects</h2>
             </header>
-            <div class="main-body" id="publications-md"></div>
+            <div class="main-body" id="projects-md"></div>
 
         </div>
     </section>
