--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a class="nav-link me-lg-3" href="#awards">Awards</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#experience">Eeperience</a>
+                        <a class="nav-link me-lg-3" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#projects">Projects</a>
