--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
                 <i class="bi-list"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 gap-4">
                     <li class="nav-item">
-                        <a class="nav-link me-lg-4" href="#home">Home</a>
+                        <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-4" href="#awards">Awards</a>
+                        <a class="nav-link" href="#awards">Awards</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-4" href="#experience">Experience</a>
+                        <a class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-4" href="#projects">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                 </ul>
             </div>
