--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-light fixed-top shadow-sm" id="mainNav">
     <div class="container px-5">
         <!-- 始终显示的标题和菜单按钮 -->
-        <a class="navbar-brand fw-bold" href="#page-top">LOGO</a>
+        <a class="navbar-brand fw-bold" href="#page-top">Home</a>
         <button 
             class="navbar-toggler" 
             type="button" 
@@ -99,7 +99,7 @@
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link" href="#home">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#awards">Awards</a>
