--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <a class="nav-link" href="#experience">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link" href="#notes">Notes</a>
                 </li>
             </ul>
         </div>
@@ -200,12 +200,12 @@
     <!-- Experience -->
 
     <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="projects">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="notes">
         <div class="container px-5">
             <header>
-                <h2 id="projects-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Projects</h2>
+                <h2 id="notes-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;Notes</h2>
             </header>
-            <div class="main-body" id="projects-md"></div>
+            <div class="main-body" id="notes-md"></div>
 
         </div>
     </section>
