--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
     <!-- Navigation-->
     <nav class="navbar navbar-light fixed-top shadow-sm" id="mainNav">
     <div class="container px-5">
-        <!-- 始终显示的标题和菜单按钮 -->
         <a class="navbar-brand fw-bold" href="#page-top">Home</a>
         <button 
             class="navbar-toggler" 
@@ -95,7 +94,6 @@
             MENU
         </button>
 
-        <!-- 折叠隐藏的导航项 -->
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -116,14 +114,13 @@
 </nav>
 
 <style>
-/* 自定义样式 */
 .navbar {
-    background: white !important; /* 确保背景不透明 */
+    background: white !important;
 }
 
 #navbarMenu {
-    position: absolute; /* 绝对定位下拉菜单 */
-    top: 100%;         /* 紧贴导航栏底部 */
+    position: absolute; 
+    top: 100%; 
     left: 0;
     right: 0;
     background: white;
@@ -132,17 +129,17 @@
 }
 
 .navbar-nav {
-    padding: 1rem 2rem; /* 增加菜单内边距 */
+    padding: 1rem 2rem;
 }
 
 .nav-item {
-    border-bottom: 1px solid #eee; /* 分隔线 */
+    border-bottom: 1px solid #eee; 
     padding: 0.5rem 0;
 }
 
 .navbar-toggler {
-    border: none;       /* 移除按钮边框 */
-    font-weight: bold;  /* 加粗文字 */
+    border: none; 
+    font-weight: bold;
 }
 </style>
     
