--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="home">
         <div class="container px-5">
             <header>
-                <h2 id="home-subtitle"> </h2>
-                <!-- <span class="bi bi-list"></span> -->
+                <h2 id="home-subtitle"><i class="bi bi-file-person"></i> About </h2>
             </header>
             <div class="main-body" id="home-md"></div>
         </div>
